tests/PhiCore/compile_failure/src/math/vector3/unary_minus.fail.cpp
#include <phi/math/vector3.hpp>

int main()
{
    phi::vector3<unsigned> v(1, 2, 3);

    phi::vector3<unsigned> v2 = -v;
}
